# seqmatcher

./: .gitignore  NOTES.md  README.md  moo.js  setup.cfg
datasets/: README.md  foursquare_events_mapping.json
examples/: awkward_array.ipynb  pattern_matching.ipynb
experiments/: README.md  app_sunburst.py  reclassify_foursq_events.ipynb  vmsp-mining.ipynb
experiments/st_sunburst_component/: __init__.py
experiments/st_sunburst_component/frontend/: index.html  main.js  package.json  pnpm-lock.yaml
experiments/st_sunburst_component/utils/: hierarchy.py
src/seqmatcher/: codegen.py  matching.py  matching_jitted.py  parsing.py  primitives.py  utilities.py
tests/: test_seqmatcher.py
