[metadata]
name = seqmatcher
version = 0.1.0
author = Ishan Anand
description = match and edit sequences of events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ananis25/seqmatcher
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# read up https://setuptools.pypa.io/en/latest/userguide/dependency_management.html

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    parsy >= 1.4
    astunparse >= 1.6.3

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest >= 7.0
